--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,36 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+.container{
+   height: 700px;
+   width: 450px;
+   border: 1px solid black;
+   margin: 50px auto;
+   border-radius: 15px;
+}
+img{
+    border-top-left-radius: 15px;
+    border-top-right-radius:15px ;
+    height: 640px;
+   width: 450px;
+}
+#icon{
+    display: flex;
+    list-style: none;
+    /* flex-direction: column;    */
+    justify-content: space-around;
+}
+ li{
+    display: flex;
+    list-style: none;
+    flex-direction: column;
+    width: 40px;
+    height: 40px;
+    justify-content: center;
+    border-radius: 2px;
+}
+li:hover{
+    background-color: rgb(241, 105, 189);
+}
 
